--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -27,7 +27,7 @@
       </mat-form-field>
 
       <p><button mat-raised-button color="primary" type="submit" (click)="onSubmit()" [disabled]="form.invalid">Créer compte</button></p>
-      <p><button mat-raised-button color="basic" [routerLink]="['/login']">Déja inscrit ? Se connecter</button></p>
+      <p><button mat-raised-button color="basic" [routerLink]="['/']">Déja inscrit ? Se connecter</button></p>
 
     </form>
   </div>
