--- a/client/src/app/index/index.component.html
+++ b/client/src/app/index/index.component.html
@@ -1,4 +1,2 @@
 <h1>Vous etes connecté</h1>
-<form action="/logout?_method=DELETE" method="POST">
-  <button type="submit">Log Out</button>
-</form>
+<p><button mat-raised-button color="basic" [routerLink]="['/']">Deconnexion</button></p>
